# MTGRandomCommander

./: README.md  main.py  pyproject.toml  rand_commander.py
core/: mainboard.py  search.py  tags.py  utils.py
examples/: artifact-1.txt  artifact-2.txt  attack-1.txt  attack-2.txt  dragon-1.txt  dragon-2.txt  enchantment-1.txt  enchantment-2.txt  equipment-1.txt  equipment-2.txt  human-1.txt  human-2.txt  pp-counters-1.txt  pp-counters-2.txt  rogue-1.txt  rogue-2.txt  sacrifice-1.txt  sacrifice-2.txt  sorcery-1.txt  sorcery-2.txt  vampire-1.txt  vampire-2.txt  zombie-1.txt  zombie-2.txt
