[tool.poetry]
name = "rand_commander"
version = "0.1.0"
description = ""
authors = ["Oliver Marshall <olivershawmarshall@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
scrython = "^1.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
